FIXED compatibility on IE 11 and 10.

--- a/ACM_General/home/static/home/scss/index.scss
+++ b/ACM_General/home/static/home/scss/index.scss
@@ -29,11 +29,17 @@
 
 .flier-space {
   height: 100%;
-  display: flex;
+  display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+  -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+  flex-shrink: 0;
 }
 
 .flier-space img {
   height: 100%;
+  flex-shrink: 0;
 }
 
 .event-wrapper:nth-child(even) .event-card .flier-space img {
@@ -41,8 +47,14 @@
 }
 
 .flier-info {
-  display: flex;
+  display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+  -webkit-flex-direction: column;
+    -ms-flex-direction: column;
   flex-direction: column;
+  white-space: pre-line;
+  flex: 1 1 auto;
   justify-content: center;
   margin-left: 20px;
 }
@@ -62,12 +74,18 @@
 @media (max-width: 641px) {
   /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
   .event-card {
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
     height: 750px;
   }
   
   .event-card .flier-space img {
     margin: auto !important;
+  }
+
+  .flier-info {
+    margin: 0;
   }
   
   .flier-info h2 {
@@ -86,6 +104,8 @@
   
   .event-wrapper:nth-child(even) .event-card {
     flex-direction: column !important;
+    -webkit-flex-direction: column !important;
+    -ms-flex-direction: column !important;
   }
   
   .event-wrapper:nth-child(even) .flier-space {
@@ -93,6 +113,55 @@
     margin-left: 0 !important;
   }
   
+  .flier-space {
+    height: 400px;
+    margin-right: 0;
+  }
+}
+
+html[data-useragent*='MSIE 10.0'] {
+  .event-card {
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-align: center;
+    height: 750px;
+  }
+
+  .event-card .flier-space img {
+    margin: auto !important;
+  }
+
+  .flier-info {
+    max-width: 600px;
+    margin: auto;
+  }
+
+  .flier-info h2 {
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .flier-info p {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .flier-info a {
+    margin-left: 15px;
+  }
+
+  .event-wrapper:nth-child(even) .event-card {
+    flex-direction: column !important;
+    -webkit-flex-direction: column !important;
+    -ms-flex-direction: column !important;
+  }
+
+  .event-wrapper:nth-child(even) .flier-space {
+    margin-right: 0;
+    margin-left: 0 !important;
+  }
+
   .flier-space {
     height: 400px;
     margin-right: 0;
